# OnTheRoad

./: README.md  docker-compose.yml
auth-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
auth-service/alembic/: env.py
auth-service/alembic/versions/: cfa002d84b82_user_models.py
auth-service/environment/: .env.example
auth-service/src/: main.py
auth-service/src/api/v1/: routes.py
auth-service/src/api/v1/base/: schemas.py
auth-service/src/api/v1/users/: router.py  schemas.py
auth-service/src/apps/base/: models.py
auth-service/src/apps/base/infra/: repository.py  security.py  services.py  uow.py
auth-service/src/apps/users/: exceptions.py  models.py
auth-service/src/apps/users/dto/: user.py
auth-service/src/apps/users/infra/: services.py  uow.py
auth-service/src/apps/users/infra/repositories/: role.py  user.py  user_session.py
auth-service/src/config/: logger.py
auth-service/src/config/database/: sessions.py
auth-service/src/config/settings/: __init__.py  app.py
auth-service/src/config/settings/apps/: jwt.py  sentry.py
content-service/: alembic.ini  pyproject.toml
content-service/alembic/: env.py
content-service/alembic/versions/: 11316b7a4bba_initial_post_profile.py
content-service/environment/: .env.example
content-service/src/: main.py
content-service/src/apps/base/: models.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts
frontend/src/components/: AuthModal.tsx
(+5 files in other folders)
