[project]
name = "auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur Alty",email = "alty.official.prim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
