[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "ruff>=0.15.21",
    "sentry-sdk>=2.64.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
