[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.139.0",
    "orjson>=3.11.9",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "ruff>=0.15.21",
    "sentry-sdk>=2.64.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
